--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,15 @@ a{
     border: 2px solid #540a2c;
     background-color: #fff;
     border: 2px solid #540a2c;
+    font: bold;
     border-radius: 5px;
     font-style: italic;
 }
-main{
+.main-banner{
     display: flex;
     background-image: url(../img/PLACEHOLDER_image1.png);
     background-size: cover;
+    width: 100%;
     border-radius: 10px;
 }
 .banner{
